--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,6 +122,11 @@ jobs:
           curl -s -o "General_Config/liuran001/config.yaml" \
             "https://gist.githubusercontent.com/liuran001/5ca84f7def53c70b554d3f765ff86a33/raw/9de058af0600fbbcfb480f9cbc23bd7dafe9d039/config.yaml"
 
+          # --- wanswu --
+          mkdir -p "General_Config/wanswu"
+          curl -s -o "General_Config/wanswu/config.yaml" \
+            "https://raw.githubusercontent.com/wanswu/my-backup/refs/heads/main/clash/config.yaml"
+
           # --- 新项目名称 (自定义) ---
           # mkdir -p "General_Config/新项目文件夹名"
           # curl -s -o "General_Config/新项目文件夹名/config.yaml" \
